# IranBSE

./: .gitignore  Makefile  README.md  claude.md  pyproject.toml  requirements.txt
config/: data_sources.yaml  hyperparams.yaml  model_config.yaml  scenarios.yaml
output/wheat_forecast/: wheat_forecast_report.txt  wheat_forecast_results.json
scripts/: fetch_data.py  generate_report.py  run_pipeline.py  wheat_forecast.py
src/alpha/cross_asset/: cot_positioning.py  dollar_dynamics.py  volatility_surface.py
src/alpha/oil/: contango_signals.py  iran_export_tracking.py  opec_positioning.py
src/alpha/wheat/: black_sea_risk.py  crop_conditions.py  food_security.py
src/backtesting/: historical_conflicts.py  metrics.py  walk_forward.py
src/data/fetchers/: base_fetcher.py  commodity_prices.py  geopolitical.py  macro.py  sentiment.py  shipping.py
src/data/processors/: base_processor.py  fundamental.py  technical.py
src/models/: base_model.py  registry.py
src/models/bayesian/: bvar.py  causal_impact.py  hierarchical.py  scenario_tree.py
src/models/ensemble/: adversarial_ensemble.py  meta_learner.py
src/models/geopolitical/: conflict_model.py  (+2 more)
src/risk/: model_risk.py  stress_testing.py  tail_risk.py
src/scenarios/: historical_analogs.py  iran_war.py  scenario_engine.py  strait_of_hormuz.py
src/visualization/: dashboard.py  scenario_plots.py  sensitivity.py
tests/test_alpha/: test_signals.py
tests/test_data/: test_fetchers.py
tests/test_models/: test_registry.py  test_statistical.py
tests/test_scenarios/: test_hormuz.py  test_scenario_engine.py
(+11 files in other folders)
